[package]
name = "sui_twitter_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0.30", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0.91"
chrono = "0.4.23"
rusqlite = { version = "0.28.0", features = ["bundled"] }
env_logger = "0.10.0"
log = "0.4.0"